dashboard, role segregation, resend password

--- a/src/app/pages/collections/lipalater/pickup.component.html
+++ b/src/app/pages/collections/lipalater/pickup.component.html
@@ -37,8 +37,8 @@
 
               <fieldset>
                 <p>
-                  Enter the customer id number. If we find a pending item for pick-up,we will send a verification
-                  code to the customer's registered mobile number
+                  Enter the lipalater staff id number. If we find a pending item for pick-up,we will send a verification
+                  code to the staff's registered mobile number
                 </p>
                 <div class="form-group">
                   <label> ID Number</label>
