--- a/src/app/pages/pending/pending.component.html
+++ b/src/app/pages/pending/pending.component.html
@@ -3,7 +3,13 @@
     <div class="box-body">
       <div class="widget-controls row">
         <div class="col-sm-6">
-          All Items Awaiting Pick up
+          <a class="btn btn-info btn-sm mb-1" routerLink="/collections/create"><i class="fa fa-user"></i> Customer
+            Pickup</a>
+          &nbsp;&nbsp;&nbsp;
+          <a class="btn btn-info btn-sm mb-1" routerLink="/collections/lipalater"><i class="fa fa-shopping-cart"></i>
+            Lipalater
+            Pickup</a>
+
         </div>
         <div class="col-sm-2"></div>
         <div class="col-sm-4">
@@ -24,8 +30,8 @@
           <tr>
             <th></th>
             <th>Customer</th>
-            <th>Cust ID</th>
-            <th>Customer Mobile</th>
+            <!-- <th>Cust ID</th>
+            <th>Customer Mobile</th> -->
             <th>Item</th>
             <th>Delivery Option</th>
             <th>Store</th>
@@ -36,8 +42,8 @@
           <tr *ngFor="let item of data; let i = index" title={{item.id}}>
             <td>{{i+1}}</td>
             <td>{{item.customer_names}}</td>
-            <td>{{item.customer_id_number}}</td>
-            <td>{{item.customer_phone_number}}</td>
+            <!-- <td>{{item.customer_id_number}}</td>
+            <td>{{item.customer_phone_number}}</td> -->
             <td>{{item.item_description}}</td>
             <td>{{(item.pick_up_type =='store_pickup')?'customer pick up':'lipalater pick up'}}</td>
             <td>{{item.store}}</td>
