--- a/src/app/pages/collections/collections.component.html
+++ b/src/app/pages/collections/collections.component.html
@@ -1,7 +1,14 @@
 <block-ui>
   <div class="box box-primary">
     <div class="box-body">
-      <div class="widget-controls row">
+      <div class=" row">
+        <div class="col-md-3">
+          <p>
+            CLick to select pick up option.
+          </p>
+        </div>
+      </div>
+      <!-- <div class="widget-controls row">
         <div class="col-sm-6">
           <a class="btn btn-info btn-sm mb-1" routerLink="/collections/create"><i class="fa fa-user"></i> Customer
             Pickup</a>
@@ -23,9 +30,23 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
       <span id="responseText"></span>
-      <table class="table table-striped  table-sm row-border hover" *ngIf="total_records > 0">
+
+      <div class="row">
+        <div class="col-md-3">
+          <a class="btn btn-info btn-lg btn-block btn-huge" routerLink="/collections/create"><i class="fa fa-user"></i>
+            Customer
+            Pickup</a>
+        </div>
+        <div class="col-md-3">
+          <a class="btn btn-info btn-lg btn-block btn-huge" routerLink="/collections/lipalater"><i
+              class="fa fa-shopping-cart"></i>
+            Lipalater
+            Pickup</a>
+        </div>
+      </div>
+      <!-- <table class="table table-striped  table-sm row-border hover" *ngIf="total_records > 0">
         <thead>
           <tr>
             <th></th>
@@ -64,26 +85,22 @@
             <li class="page-item active">
               <a class="page-link">{{current_page}}</a>
             </li>
-            <!--
-              <li class="page-item active">
-                <a class="page-link" href="#">2 <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="page-item"><a class="page-link" href="#">3</a></li> -->
 
-            <li class="page-item {{(current_page == total_pages)? 'disabled': ''}}">
-              <a class="page-link" (click)="loadPage(current_page+1)" tabindex="-1">Next</a>
-            </li>
-            <li class="page-item {{(current_page == total_pages)? 'disabled': ''}}">
-              <a class="page-link" (click)="loadPage(total_pages)" tabindex="-1">Last</a>
-            </li>
 
-          </ul>
-        </nav>
-      </div>
+      <li class="page-item {{(current_page == total_pages)? 'disabled': ''}}">
+        <a class="page-link" (click)="loadPage(current_page+1)" tabindex="-1">Next</a>
+      </li>
+      <li class="page-item {{(current_page == total_pages)? 'disabled': ''}}">
+        <a class="page-link" (click)="loadPage(total_pages)" tabindex="-1">Last</a>
+      </li>
 
-      <div *ngIf="total_records == 0">
-        <div class="alert alert-lg alert-warning">No data available</div>
-      </div>
+      </ul>
+      </nav>
+    </div>
+
+    <div *ngIf="total_records == 0">
+      <div class="alert alert-lg alert-warning">No data available</div>
+    </div> -->
 
     </div>
   </div>
