changed menu link from collected to item pick up

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -128,7 +128,7 @@
             </li>
             <li class="nav-item">
               <a class="top-link notification-link" routerLink="/collections">
-                <i class="fa fa-cart-plus" style="color:#88b840"></i> Collected
+                <i class="fa fa-cart-plus" style="color:#88b840"></i> Item Pickup
               </a>
             </li>
             <li class="nav-item">
