added date columns to pending and collected lists

--- a/src/app/pages/released/released.component.html
+++ b/src/app/pages/released/released.component.html
@@ -31,6 +31,7 @@
             <th>Delivery Option</th>
             <th>Store</th>
             <th>Status</th>
+            <th>Date Collected</th>
           </tr>
         </thead>
         <tbody>
@@ -43,6 +44,7 @@
             <td>{{(item.pick_up_type =='store_pickup')?'customer pick up':'lipalater pick up'}}</td>
             <td>{{item.store}}</td>
             <td>{{item.status}}</td>
+            <td>{{item.created_at | date}}</td>
 
           </tr>
         </tbody>
