--- a/src/app/pages/collections/collections.component.html
+++ b/src/app/pages/collections/collections.component.html
@@ -4,7 +4,7 @@
       <div class=" row">
         <div class="col-md-3">
           <p>
-            CLick to select pick up option.
+            Click to select pick up option.
           </p>
         </div>
       </div>
