--- a/src/app/pages/pending/pending.component.html
+++ b/src/app/pages/pending/pending.component.html
@@ -36,6 +36,7 @@
             <th>Delivery Option</th>
             <th>Store</th>
             <th>Status</th>
+            <th>Date Added</th>
           </tr>
         </thead>
         <tbody>
@@ -48,6 +49,7 @@
             <td>{{(item.pick_up_type =='store_pickup')?'customer pick up':'lipalater pick up'}}</td>
             <td>{{item.store}}</td>
             <td>{{item.status}}</td>
+            <td>{{item.created_at | date}}</td>
 
           </tr>
         </tbody>
