--- a/src/app/pages/released/released.component.html
+++ b/src/app/pages/released/released.component.html
@@ -25,7 +25,7 @@
           <tr>
             <th></th>
             <th>Customer</th>
-            <th>Cust ID</th>
+            <th>Customer ID</th>
             <th>Customer Mobile</th>
             <th>Item</th>
             <th>Delivery Option</th>
