updated pickup option to reflect the true value in core

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -146,8 +146,9 @@
               <!-- <td>{{item.customer_id_number}} </td>
               <td>{{item.customer_phone_number}}</td> -->
               <td>{{item.store}}</td>
-              <td>{{(item.pick_up_type =='store_pickup')?'customer pick up':'lipalater pick up'}}</td>
+              <td>{{(item.pick_up_type =='store_pick_up')?'customer pick up':'lipalater pick up'}}</td>
               <td>{{item.created_at | date}}</td>
+
 
             </tr>
 
