--- a/src/app/pages/pending/pending.component.html
+++ b/src/app/pages/pending/pending.component.html
@@ -46,7 +46,7 @@
             <!-- <td>{{item.customer_id_number}}</td>
             <td>{{item.customer_phone_number}}</td> -->
             <td>{{item.item_description}}</td>
-            <td>{{(item.pick_up_type =='store_pickup')?'customer pick up':'lipalater pick up'}}</td>
+            <td>{{(item.pick_up_type =='store_pick_up')?'customer pick up':'lipalater pick up'}}</td>
             <td>{{item.store}}</td>
             <td>{{item.status}}</td>
             <td>{{item.created_at | date}}</td>
