made dashboard clickable + removed hover on table for partners and stores

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -12,7 +12,7 @@
       <div class="row mb-3"
         *ngIf="currentUser.user.role == 'Lipalater admin' || currentUser.user.role == 'Lipalater Super admin'">
 
-        <div class="col-xl-3 col-sm-6 py-2">
+        <a routerLink="/partners" class="col-xl-3 col-sm-6 py-2 custom-card">
           <div class="card bg-success text-white h-100">
             <div class="card-body bg-success">
               <div class="rotate">
@@ -22,8 +22,8 @@
               <h1 class="display-4">{{partners}}</h1>
             </div>
           </div>
-        </div>
-        <div class="col-xl-3 col-sm-6 py-2">
+        </a>
+        <a routerLink="/stores" class="col-xl-3 col-sm-6 py-2 custom-card">
           <div class="card text-white bg-primary h-100">
             <div class="card-body bg-primary">
               <div class="rotate">
@@ -33,8 +33,8 @@
               <h1 class="display-4">{{stores}}</h1>
             </div>
           </div>
-        </div>
-        <div class="col-xl-3 col-sm-6 py-2">
+        </a>
+        <a routerLink="/users" class="col-xl-3 col-sm-6 py-2 custom-card">
           <div class="card text-white bg-info h-100">
             <div class="card-body bg-info">
               <div class="rotate">
@@ -44,8 +44,9 @@
               <h1 class="display-4">{{store_users}}</h1>
             </div>
           </div>
-        </div>
-        <div class="col-xl-3 col-sm-6 py-2">
+        </a>
+        <a routerLink="/lipalater-users" class="col-xl-3 col-sm-6 py-2 custom-card">
+
           <div class="card text-white bg-dark h-100">
             <div class="card-body">
               <div class="rotate">
@@ -55,7 +56,8 @@
               <h1 class="display-4">{{internal_users}}</h1>
             </div>
           </div>
-        </div>
+
+        </a>
       </div>
 
       <hr *ngIf="currentUser.user.role == 'Lipalater admin' || currentUser.user.role == 'Lipalater Super admin'">
@@ -68,8 +70,7 @@
 
       <div class="row mb-3"
         *ngIf="currentUser.user.role == 'Lipalater admin' || currentUser.user.role == 'Lipalater Super admin' || currentUser.user.role == 'Store admin'">
-
-        <div class="col-xl-3 col-sm-6 py-2">
+        <a routerLink="/released" class="col-xl-3 col-sm-6 py-2 custom-card">
           <div class="card bg-success text-white h-100">
             <div class="card-body bg-success">
               <div class="rotate">
@@ -79,8 +80,8 @@
               <h1 class="display-4">{{collected_count}}</h1>
             </div>
           </div>
-        </div>
-        <div class="col-xl-3 col-sm-6 py-2">
+        </a>
+        <a routerLink="/released" class="col-xl-3 col-sm-6 py-2 custom-card">
           <div class="card text-white bg-danger h-100">
             <div class="card-body bg-danger">
               <div class="rotate">
@@ -90,8 +91,8 @@
               <h1 class="display-4">{{collected_value}}</h1>
             </div>
           </div>
-        </div>
-        <div class="col-xl-3 col-sm-6 py-2">
+        </a>
+        <a routerLink="/pending" class="col-xl-3 col-sm-6 py-2 custom-card">
           <div class="card text-white bg-info h-100">
             <div class="card-body bg-info">
               <div class="rotate">
@@ -101,8 +102,8 @@
               <h1 class="display-4">{{pending_count}}</h1>
             </div>
           </div>
-        </div>
-        <div class="col-xl-3 col-sm-6 py-2">
+        </a>
+        <a routerLink="/pending" class="col-xl-3 col-sm-6 py-2 custom-card">
           <div class="card text-white bg-warning h-100">
             <div class="card-body">
               <div class="rotate">
@@ -112,7 +113,7 @@
               <h1 class="display-4">{{pending_value}}</h1>
             </div>
           </div>
-        </div>
+        </a>
       </div>
 
       <hr
@@ -139,7 +140,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor="let item of pending; let i = index" title={{item.id}}>
+            <tr *ngFor="let item of pending; let i = index" id={{item.id}}>
               <td>{{i+1}}</td>
               <td>{{item.item_description}}</td>
               <td>{{item.customer_names}} </td>
@@ -182,7 +183,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor="let item of collected; let i = index" title={{item.id}}>
+            <tr *ngFor="let item of collected; let i = index" id={{item.id}}>
               <td>{{i+1}}</td>
               <td>{{item.customer_names}} </td>
               <td>{{item.customer_id_number}} </td>
