--- a/src/app/pages/partners/partners.component.html
+++ b/src/app/pages/partners/partners.component.html
@@ -34,7 +34,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let item of data; let i = index" title={{item.id}}>
+          <tr *ngFor="let item of data; let i = index" id={{item.id}}>
             <td>{{((current_page-1)*page_size)+i+1}}</td>
             <td>{{item.name}}</td>
             <td>{{item.email}}</td>
