--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -135,6 +135,7 @@
               <!-- <th>Customer Id</th>
               <th>Customer Phone</th> -->
               <th>Store</th>
+              <th>Amount</th>
               <th>Pickup type</th>
               <th>Date Added</th>
             </tr>
@@ -147,6 +148,7 @@
               <!-- <td>{{item.customer_id_number}} </td>
               <td>{{item.customer_phone_number}}</td> -->
               <td>{{item.store}}</td>
+              <td>{{item.buying_price}}</td>
               <td>{{(item.pick_up_type =='store_pick_up')?'customer pick up':'lipalater pick up'}}</td>
               <td>{{item.created_at | date}}</td>
 
@@ -179,6 +181,7 @@
               <th>item</th>
               <th>Colected By</th>
               <th>Store</th>
+              <th>Amount</th>
               <th>Date Collected</th>
             </tr>
           </thead>
@@ -191,6 +194,7 @@
               <td>{{item.item}}</td>
               <td>{{item.collected_by_name}} Id: {{item.collected_by_id_number}}</td>
               <td>{{item.store}}</td>
+              <td>{{item.buying_price}}</td>
               <td>{{item.created_at | date}}</td>
             </tr>
 
